--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <html>
   <head>
+    <link rel="icon" href="http://hoo-doo.tech/public/images/favicon.ico" />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link href="public/css/style.css" rel="stylesheet" />
     <meta charset="UTF-8" />
@@ -14,29 +19,81 @@
   </head>
 
   <body>
-    <div class="content">
+    <div class="content" id="">
       <center>
         <br /><br /><br /><br />
         <p class="text" style="color: white;">
-          Finally you found me
+          Finally you found Me
         </p>
 
         <p class="text" style="font-family: gotham; color: white;">
           It's Hoodoo
         </p>
         <br /><br />
-        <a class="btn1" href="#" style="font-size: 25px; font-family: monsterr;"
-          >Explore</a
-        >
+        <a href="#c1" style="text-decoration: none; color: white;"
+          ><i class="fa fa-arrow-circle-down" style="font-size: 50px;"></i
+        ></a>
         <br /><br />
       </center>
     </div>
 
-    <div class="content">
+    <div class="content" id="c1">
+      <br /><br /><br /><br /><br />
+      <center>
+        <a href="../projects" style="text-decoration: none;">
+          <div class="card">
+            <div class="small_card">
+              <div class="text_in_small_card">&lt;Projects&gt;</div>
+            </div>
+            <div class="text_in_card" style="color: black;">
+              A repository of Projects that I have undertaken. Feel free to
+              explore
+            </div>
+          </div>
+        </a>
+        <br /><br />
+        <br /><br />
+        <a href="#c2" style="text-decoration: none; color: white;"
+          ><i class="fa fa-arrow-circle-down" style="font-size: 50px;"></i
+        ></a>
+      </center>
+    </div>
+    <div class="content" id="c2">
+      <br /><br /><br /><br /><br />
       <center>
         <div class="card">
-          Content
+          <div class="small_card2">
+            <div class="text_in_small_card">&lt;Hobbies&gt;</div>
+          </div>
+          <div class="text_in_card">
+            These hobbies define me. If you are interested you can take a look.
+          </div>
         </div>
+        <br /><br /><br /><br />
+        <a href="#c3" style="text-decoration: none; color: white;"
+          ><i class="fa fa-arrow-circle-down" style="font-size: 50px;"></i
+        ></a>
+      </center>
+    </div>
+    <div class="content" id="c3">
+      <br /><br /><br /><br /><br />
+      <center>
+        <a href="../covid19" style="text-decoration: none;">
+          <div class="card">
+            <div class="small_card3">
+              <div class="text_in_small_card">
+                &lt;Coronavirus&gt;
+              </div>
+            </div>
+            <div class="text_in_card" style="color: black;">
+              Here you can see the updates regarding the ongoing pandemic.
+            </div>
+          </div>
+        </a>
+        <br /><br /><br /><br />
+        <a href="#" style="text-decoration: none; color: white;"
+          ><i class="fa fa-arrow-circle-up" style="font-size: 50px;"></i
+        ></a>
       </center>
     </div>
   </body>
