--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="content" id="c3">
       <br /><br /><br /><br /><br />
       <center>
-        <a href="../covid19" style="text-decoration: none;">
+        <a href="http://hoo-doo.tech/covid19" style="text-decoration: none;">
           <div class="card">
             <div class="small_card3">
               <div class="text_in_small_card">
