--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="icon" href="http://hoo-doo.tech/public/images/favicon.ico" />
+    <link rel="icon" href="../public/images/favicon.ico" />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
